# templates-dev-python

./: .gitignore  CHANGELOG.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
